--- a/GeriatricHelper/pt-PT.lproj/CGAGuide.strings
+++ b/GeriatricHelper/pt-PT.lproj/CGAGuide.strings
@@ -15,10 +15,10 @@
 "ONy-If-MQp.text" = "Title";
 
 /* Class = "UITableViewController"; title = "CGA Guide"; ObjectID = "Ore-uh-hNV"; */
-"Ore-uh-hNV.title" = "Guia AGG";
+"Ore-uh-hNV.title" = "Guia da AGG";
 
 /* Class = "UITabBarItem"; title = "CGA Guide"; ObjectID = "TZo-v3-plm"; */
-"TZo-v3-plm.title" = "Guia AGG";
+"TZo-v3-plm.title" = "Guia da AGG";
 
 /* Class = "UINavigationItem"; title = "CGA Scale Questions"; ObjectID = "XYJ-Sy-WWJ"; */
 "XYJ-Sy-WWJ.title" = "Questões da Escala";
