--- a/GeriatricHelper/TODO.txt
+++ b/GeriatricHelper/TODO.txt
@@ -1,8 +1,15 @@
-- mostrar guia de AGG por área (collection view)
+- AGG guide
 
 - scale help: improve table
+- enviar feedback
+- testar em iPhone
+- verificar soma de nutritional
+- gerar e mostrar PDF com notas
+- campo das notas maior
+- criar About page
 
-- yes no questions
+- yes no questions new layout
+- firebase download scales only when needed
 
 - multiple categories:
 - retificar info popup
