--- a/GeriatricHelper/TODO.txt
+++ b/GeriatricHelper/TODO.txt
@@ -1,4 +1,3 @@
-- testar em iPhone
 - enviar feedback
 
 - gerar e mostrar PDF com notas
@@ -12,3 +11,8 @@
 - retificar info popup
 
 - nutritional - aparecer tabela de score
+
+- review: disable de botão save
+- vai para review sem escalas completas
+- marcha: altura da célula
+- multiple choice: usar setas para alternar entre categorias
