- only questions for the patient's gender appear - alternate background color for question option - PDF options appear in Portuguese - if finishing session and no scale finished, go to main screen - save button inside scales - score appears for nutritional scales

--- a/GeriatricHelper/TODO.txt
+++ b/GeriatricHelper/TODO.txt
@@ -1,9 +1,8 @@
 - intro - scale images
-- save button
 - table row size (single question, question choices)
 - review icons appear really strange
-- PDF: put in Portuguese
-- CGA tour
+- PDF: file name
+- yes no questions bigger buttons
 
 - enviar feedback
 
@@ -11,9 +10,7 @@
 
 - criar About page
 - multiple categories:
-- retificar info popup
 
-- nutritional - aparecer tabela de score
 
 - review: disable de botão save
 - vai para review sem escalas completas
